ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: noble-mutuwa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080 # This is an example of a second path for the same host
